# Weekly-Report

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  SETUP.md  db_backup_20260114.sql  db_dump_20260115_203037.sql  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/backend/: Dockerfile  package.json
apps/backend/prisma/: schema.prisma  seed.ts
apps/backend/scripts/: set-chain-display-order.ts
apps/backend/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
apps/backend/src/attendance-types/: attendance-types.controller.ts  attendance-types.module.ts  attendance-types.service.ts
apps/backend/src/attendances/: attendances.controller.ts  attendances.service.ts
apps/backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
apps/backend/src/chains/: chains.controller.ts  chains.service.ts
apps/backend/src/files/: files.controller.ts  files.service.ts
apps/backend/src/issues/: issues.controller.ts  issues.module.ts  issues.service.ts
apps/backend/src/tasks/: tasks.controller.ts  tasks.service.ts
apps/backend/src/teams/: teams.controller.ts  teams.service.ts
apps/batch/: .gitignore  README.md  config.ini.example  iris-auto-login.spec  pyproject.toml  start.bat
apps/batch/auto_schedule/: api_client.py  auth.py  main.py
apps/frontend/: Dockerfile  SETUP-FRONTEND.md  next.config.js  package.json  tsconfig.json
apps/frontend/src/: middleware.ts
docs/: api-design.md  deployment.md  entity-design.md  frontend-implementation-plan.md  middle_Check.md  project-structure.md  ui-design.md
(+93 files in other folders)
