[tool.poetry]
name = "auto-login"
version = "0.1.0"
description = ""
authors = ["longbee2 <longbee46@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
selenium = "^4.23.1"
requests = "^2.32.0"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
