[project]
name = "auto-schedule"
version = "0.1.0"
description = ""
authors = [{ name = "longbee2", email = "longbee46@gmail.com" }]
requires-python = ">=3.10,<3.15"
readme = "README.md"
dependencies = [
    "selenium>=4.23.1,<5",
    "requests>=2.32.0,<3",
]

[dependency-groups]
dev = ["pyinstaller>=6.16.0,<7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auto_schedule"] 
